--- a/Logstash/logstash-deploy.yaml
+++ b/Logstash/logstash-deploy.yaml
@@ -1,26 +1,3 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: logstash
-  labels:
-    app: logstash-app
-    type: backend
-spec:
-  selector:
-    matchLabels:
-      type: backend
-  replicas: 3
-  template:
-    metadata:
-      name: logstash-app
-      labels:
-        app: logstash
-        type: backend
-    spec:
-      containers:
-        - name: logstash-app
-          image: logstash
----
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -33,64 +10,63 @@ data:
   logstash.conf: |
     # all input will come from filebeat, no local logs
     input {
-      file {
-            path => "/var/log/apache2/access.log"
-        start_position => "beginning"
-        sincedb_path => "/dev/null"
+      beats {
+        port => 5044
       }
     }
     filter {
-        grok {
-          match => { "message" => "%{COMBINEDAPACHELOG}" }
+      if [message] =~ /^\{.*\}$/ {
+        json {
+          source => "message"
         }
-        date {
-        match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
       }
-      geoip {
-          source => "clientip"
+      if [ClientHost] {
+        geoip {
+          source => "ClientHost"
         }
+      }
     }
     output {
-      elasticsearch {
-        hosts => ["localhost:9200"]
-      }
+        elasticsearch {
+            hosts => [ "elasticsearch-logging:9200" ]
+        }
     }
 ---
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: logstash-deployment
-  namespace: kube-system
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: logstash
-    spec:
-      containers:
-      - name: logstash
-        image: docker.elastic.co/logstash/logstash:6.3.0
-        ports:
-        - containerPort: 5044
-        volumeMounts:
-          - name: config-volume
-            mountPath: /usr/share/logstash/config
-          - name: logstash-pipeline-volume
-            mountPath: /usr/share/logstash/pipeline
-      volumes:
-      - name: config-volume
-        configMap:
-          name: logstash-configmap
-          items:
-            - key: logstash.yml
-              path: logstash.yml
-      - name: logstash-pipeline-volume
-        configMap:
-          name: logstash-configmap
-          items:
-            - key: logstash.conf
-              path: logstash.conf
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: logstash-deployment
+#   namespace: kube-system
+# spec:
+#   replicas: 1
+#   template:
+#     metadata:
+#       labels:
+#         app: logstash
+#     spec:
+#       containers:
+#       - name: logstash
+#         image: docker.elastic.co/logstash/logstash:6.3.0
+#         ports:
+#         - containerPort: 5044
+#         volumeMounts:
+#           - name: config-volume
+#             mountPath: /usr/share/logstash/config
+#           - name: logstash-pipeline-volume
+#             mountPath: /usr/share/logstash/pipeline
+#       volumes:
+#       - name: config-volume
+#         configMap:
+#           name: logstash-configmap
+#           items:
+#             - key: logstash.yml
+#               path: logstash.yml
+#       - name: logstash-pipeline-volume
+#         configMap:
+#           name: logstash-configmap
+#           items:
+#             - key: logstash.conf
+#               path: logstash.conf
 ---
 kind: Service
 apiVersion: v1
